# sympytensor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  env.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/conda_envs/: sympytensor.yml
.github/workflows/: release.yml  run_tests.yml
pytensor_printer/: __init__.py  printing.py  pymc_printing.py
sympytensor/: __init__.py  _version.py  pymc.py  pytensor.py
tests/: conftest.py  test_pymc.py  test_pymc_printing.py  test_pytensor.py  test_pytensor_printer.py
