[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = 'sympytensor'
dynamic = ['version']
requires-python = ">=3.10"
description = "Print sympy expressions to pytensor graphs"
readme = "README.md"
license = {text = "MIT License"}
classifiers =[
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics"
]

keywords = [
    "computer algebra",
    "pytensor",
    "sympy",
]

dependencies = [
    "pytensor",
    "sympy",
    "pymc"
  ]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.hooks.vcs]
version-file = "sympytensor/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  '.github',
]

[tool.hatch.build.targets.wheel]
packages = ["sympytensor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict=true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 100

[tool.nbqa.mutate]
isort = 1
black = 1
pyupgrade = 1

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["sympytensor/_version.py", "setup.py"]
