[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = 'sympytensor'
dynamic = ['version']
requires-python = ">=3.12"
description = "Print sympy expressions to pytensor graphs"
readme = "README.md"
license = {text = "MIT License"}
classifiers =[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics"
]

keywords = [
    "computer algebra",
    "pytensor",
    "sympy",
]

dependencies = [
    "pytensor>=2.37.0",
    "sympy>=1.14.0",
    "pymc>=5.27.1",
    "mpmath>=1.1.0,<1.4.0"
  ]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.hooks.vcs]
version-file = "sympytensor/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  '.github',
]

[tool.hatch.build.targets.wheel]
packages = ["sympytensor"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict=true
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning"]

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120

[tool.nbqa.mutate]
isort = 1
black = 1
pyupgrade = 1

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["sympytensor/_version.py", "setup.py"]
