[metadata]
name = sympytensor
version = 1.1.1
description = Compile sympy expressions to pytensor graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/sympytensor
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    sympy
    pytensor
    pymc

[options.packages.find]
exclude = tests*
