[metadata]
name = sympytensor
version = 1.2.1
description = Compile sympy expressions to pytensor graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jessegrabowski/sympytensor
author = Jesse Grabowski
author_email = jessegrabowski@gmail.com

[options]
packages = find:
install_requires =
    sympy
    pytensor
    pymc

[options.packages.find]
exclude = tests*

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
#VCS = git
#style = pep440
#versionfile_source =
#versionfile_build =
#tag_prefix =
#parentdir_prefix =
